--- a/app/component/routepage/route-schedule-dropdown.scss
+++ b/app/component/routepage/route-schedule-dropdown.scss
@@ -160,3 +160,9 @@
     }
   }
 }
+
+.schedule-dropdown-check-icon {
+  color: $primary-dark !important;
+  width: 24px !important;
+  height: 24px !important;
+}
