--- a/app/component/stop/stop.scss
+++ b/app/component/stop/stop.scss
@@ -773,7 +773,7 @@ hr.action-bar {
 .timetable-topbar {
   display: flex;
   justify-content: center;
-  background: $white;
+  background: $background-default;
   margin: 8px 48px 16px 64px;
 
   .secondary-button.print {
